--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@ body {
     /*background-attachment: fixed;*/
 }
 
-html {
-    overflow-y: scroll;
-}
+/*html {*/
+/*    overflow-y: scroll;*/
+/*}*/
 
 body {
     margin: auto;
